background image cropped correctly

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 html{
   height: 100%;
   background: url('./images/home_pic.jpg');
-  background-position: center;
+  background-position: 0 -200px;
   background-repeat: no-repeat;
   background-size: cover;
 }
